// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Select Authentication Method                                                                     │
│                                                                                                  │
│ (selected) Log in with Google (OAuth)                                                            │
│ (not selected) Gemini API Key                                                                    │
│ (not selected) Vertex AI (GCP)                                                                   │
│ (not selected) OpenAI API                                                                        │
│ (not selected) Amazon Bedrock                                                                    │
│ (not selected) vLLM (Local/Remote)                                                               │
│ (not selected) AI API Gateway                                                                    │
│                                                                                                  │
│ Press ESC to cancel                                                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with validation error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Select Authentication Method                                                                     │
│                                                                                                  │
│ (selected) Log in with Google (OAuth)                                                            │
│ (not selected) Gemini API Key                                                                    │
│ (not selected) Vertex AI (GCP)                                                                   │
│ (not selected) OpenAI API                                                                        │
│ (not selected) Amazon Bedrock                                                                    │
│ (not selected) vLLM (Local/Remote)                                                               │
│ (not selected) AI API Gateway                                                                    │
│                                                                                                  │
│ Some validation error                                                                            │
│                                                                                                  │
│ Press ESC to cancel                                                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
